[package]
name = "hello_osm"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.21.0", features = [ "derive" ] }
cfg-if = "1.0.0"
env_logger = "0.11.6"
error-chain = "0.12.4"
geo = "0.29.3"
log = "0.4.22"
pollster = "0.4.0"
reqwest = {version = "0.12.12", features = ["blocking"] }
serde = "1.0.217"
serde_json = "1.0.134"
tokio = "1.43.0"
wgpu = "23.0.1"
winit = { version = "0.29", features = ["rwh_05"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "22.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
