[package]
name = "hello_osm"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
bytemuck = { version = "1.21.0", features = ["derive"] }
cfg-if = "1.0.0"
env_logger = "0.11.6"
error-chain = "0.12.4"
futures = "0.3.31"
geo = { version = "0.29.3", features = ["use-serde"] }
geojson = "0.24.1"
log = "0.4.22"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.217"
serde_json = "1.0.134"
tokio = { version = "1.43.0", features = ["full"] }
